z-index fix

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -57,6 +57,7 @@ a:visited {
     border: solid grey 2px;
     position: fixed;
     bottom: 1px;
+    z-index: 2;
 }
 
 img {
@@ -92,11 +93,12 @@ body {
     height: 35px;
     text-align: center;
     padding-top: 5px;
-    padding-right: 50px;
+    padding-right: 30px;
     background: #4aaaa5;
     color: #ffffff;
     position: absolute;
     top: 200px;
+    z-index: 1
 
 
 }
